# elections

./: Dockerfile  pyproject.toml
app/: api.py  main.py
app/db/: crud.py  database.py  models.py  schemas.py
website/: index.html
website/static/: main.css
