[project]
name = "mux-elections"
version = "0.1"
description = ""
authors = [
    {name = "Clément Schreiner", email = "clement@mux.me"},
]
dependencies = [
    "pandas>=1.4.2",
    "fastapi>=0.75.2",
    "sqlalchemy>=1.4.36",
    "requests>=2.27.1",
    "uvicorn>=0.17.6",
    "jinja2>=3.1.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
mux-elections = "app.main:main"
